# average-benchmark

./: .gitignore  Cargo.toml  Dockerfile  PRIVACY.md  README.md  dockerfile  flake.nix
.github/workflows/: cargo-publish.yml  docker-publish.yml
api/: .env.example  Cargo.toml
api/src/: main.rs
api/src/handlers/: benchmark.rs  health.rs  mod.rs
api/src/models/: cpu_info.rs  mod.rs
api/src/rate_limiter/: middleware.rs  mod.rs
average-benchmark/: Cargo.toml  README.md  build.rs
average-benchmark/src/: benchmark.rs  main.rs  network.rs  system_info.rs  utils.rs
benchmark/: Cargo.toml  README.md
benchmark/src/: network.rs
k8s/: coredns.yaml.sed  deployment.yaml  generate-secret.sh  namespace.yaml  service.yaml
src/: benchmark.rs  main.rs  utils.rs
the-average-benchmark/: Cargo.toml  flake.nix
the-average-benchmark-api/: Cargo.toml
the-average-benchmark-api/src/: main.rs
the-average-benchmark-api/src/handlers/: benchmark.rs
the-average-benchmark-api/src/models/: cpu_info.rs  mod.rs
the-average-benchmark-api/src/rate_limiter/: middleware.rs
the-average-benchmark/src/: utils.rs
