[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
dotenv = "0.15.0"
