[package]
name = "average-benchmark"
description = "A benchmarking tool for performance cpu analysis"
license = "MIT"
version = "0.1.1"
edition = "2021"
publish = true

[dependencies]
num_cpus = "1.13.0"
sysinfo = "0.34.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
chrono = "0.4.40"
log = "0.4"
env_logger = "0.11.7"

[lib]
crate-type = ["cdylib"]