[package]
name = "average-benchmark"
description = "A benchmarking tool for performance cpu analysis"
license = "MIT"
version = "0.1.1"
edition = "2021"
publish = true

[dependencies]
num_cpus = "1.13"
sysinfo = "0.35"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
chrono = "0.4.40"
log = "0.4"
env_logger = "0.11.7"
rayon = "1"

[lib]
crate-type = ["cdylib"]
